--- a/design.css
+++ b/design.css
@@ -5,12 +5,34 @@
     bottom: 15%;
     right: 0%;
 }
+#task-title{
+    text-align: center;
+    font-weight: 700;
+}
+#search{
+    display: none
+}
+
+#searchbtn{
+    position: fixed;
+    right: 0%;
+    bottom: 30%;
+}
 
 #task{
+    display: flex;
+    width: 80%;
     position: fixed;
     bottom: 1%;
-    background-color: black;
+    /* flex-direction: row; */
+    background-color: grey;
+    text-align: center;
     color: white;
+    content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 30px;
+
 }
 /* #taskicon
 {
